# HubertSzelepustaKolokiwumCpp

./: CMakeLists.txt  HubertSzelepustaKolokwium.pro  figura.cpp  figura.h  kwadrat.cpp  kwadrat.h  main.cpp  polaczenie.cpp  polaczenie.h  trojkat.cpp  trojkat.h
